--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,12 @@
 *.mod.o.cmd
 *.ko.cmd
 *.o.cmd
+*.gch
 
 pa2/Module.symvers
 pa2/modules.order
 pa2/.Module.symvers.cmd
 pa2/.clangd
 pa2/.modules.order.cmd
+
+pa3/multi-lookup
